syntax = "proto3";
package kaskada.kaskada.v1alpha;

import "kaskada/kaskada/v1alpha/common.proto";

message UnspecifiedOutput {}

message ObjectStoreOutput {
  FileType file_type = 1;

  // The paths of results from the query.
  //
  // Files may be returned at any point in the response stream.
  // Each file represents a different subset of the results. All files
  // should be considered part of the result set.
  // Each output file will appear once in the output paths of one of
  // the message in the response stream. All output paths appearing in
  // any message in the response should be collected and used to represent
  // the complete output.
  ResultPaths output_paths = 2;

  message ResultPaths {
    repeated string paths = 1;
  }
}

message RedisOutput {}

message PulsarOutput {
  // The topic url within the instance.
  string topic_url = 1;

  // The Pulsar protocol URL for the cluster.
  string broker_service_url = 2;
}
